[DEV] The gradle has been updated and services repository DI were added

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ArtGallery</string>
+    <string name="title_activity_test_compose">TestActivityCompose</string>
 </resources>
